3º Ano/2º Semestre/C/Compiladores_DS/Práticas/Bloco 2 - Remade/Ex1/WithVisitor/Hello.g4
grammar Hello;
//This time i did the exercise using a visitor

main: greetings
    | bye       
    ;

greetings : 'hello' names+ 
          ;

bye : 'bye' names+
    ;

names : ID
      ; 


ID : [a-zA-Z]+;
WS : [ \t\r\n]+ -> skip;
